# mpeg4ip

./: Makefile.in  aclocal.m4  config.h.in  configure  configure.ac  configure.in
common/: Makefile.in
common/video/: Makefile.in
common/video/iso-mpeg4/: Makefile.in  aclocal.m4  config.h.in  configure  configure.ac  configure.in
common/video/iso-mpeg4/src/: Makefile.am  Makefile.in
doc/: Makefile.in
doc/ietf/: Makefile.in
doc/mcast/: Makefile.in
doc/mp4v2/: Makefile.in
doc/programs/: Makefile.in
include/: Makefile.in
lib/: Makefile.am  Makefile.in
lib/audio/: Makefile.am  Makefile.in
lib/avi/: Makefile.am  Makefile.in
lib/fposrec/: Makefile.am  Makefile.in
lib/gnu/: Makefile.am  Makefile.in
lib/ismacryp/: Makefile.am  Makefile.in
lib/mp4/: Makefile.am  Makefile.in
lib/mp4/doc/: Makefile.in
lib/mp4av/: Makefile.am  Makefile.in
lib/mp4v2/: Makefile.am  Makefile.in
lib/mp4v2/test/: Makefile.am  Makefile.in
lib/mp4v2/util/: Makefile.am  Makefile.in
lib/mpeg2ps/: Makefile.am  Makefile.in
lib/mpeg2t/: Makefile.am  Makefile.in
lib/msg_queue/: Makefile.am  Makefile.in
lib/sdp/: Makefile.am  Makefile.in
lib/utils/: Makefile.am  Makefile.in
player/: Makefile.in
player/lib/: Makefile.in
player/lib/audio/: Makefile.in
player/lib/audio/celp/: Makefile.in
player/lib/audio/celp/BS/: Makefile.am  Makefile.in
player/lib/audio/celp/dec/: Makefile.am  Makefile.in
player/lib/audio/celp/include/: Makefile.in
player/lib/audio/faad/: Makefile.am  Makefile.in
player/lib/audio/mp3util/: Makefile.in
player/lib/audio/portaudio/: Makefile.in
player/lib/libhttp/: Makefile.am  Makefile.in
player/lib/mp4util/: Makefile.am  Makefile.in
player/lib/rtsp/: Makefile.am  Makefile.in
player/plugin/: Makefile.in
player/plugin/audio/: Makefile.in
player/plugin/audio/a52dec/: Makefile.am  Makefile.in
player/plugin/audio/celp/: Makefile.am  Makefile.in
player/plugin/audio/faad2/: Makefile.am  Makefile.in
player/plugin/audio/ffmpeg/: Makefile.am  Makefile.in
player/plugin/audio/g711/: Makefile.am  Makefile.in
player/plugin/audio/raw/: Makefile.am  Makefile.in
player/plugin/rtp/: Makefile.in
player/plugin/rtp/h261/: Makefile.am  Makefile.in
player/plugin/rtp/h264/: Makefile.am  Makefile.in
player/plugin/rtp/isma_audio/: Makefile.am  Makefile.in
player/plugin/rtp/isma_href/: Makefile.am  Makefile.in
player/plugin/rtp/isma_video/: Makefile.am  Makefile.in
player/plugin/rtp/rfc2429/: Makefile.am  Makefile.in
player/plugin/rtp/rfc3016/: Makefile.am  Makefile.in
player/plugin/rtp/rfc3267/: Makefile.am  Makefile.in
player/plugin/text/: Makefile.in
player/plugin/text/href/: Makefile.am  Makefile.in
player/plugin/text/plain/: Makefile.am  Makefile.in
player/plugin/video/: Makefile.in
player/plugin/video/ffmpeg/: Makefile.am  Makefile.in
player/plugin/video/h261/: Makefile.am  Makefile.in
player/plugin/video/mpeg2dec/: Makefile.am  Makefile.in
player/plugin/video/raw/: Makefile.am  Makefile.in
player/plugin/video/xvid/: Makefile.am  Makefile.in
player/src/: Makefile.am  Makefile.in
player/src/codec/: Makefile.in
player/src/codec/aa/: Makefile.am  Makefile.in
player/src/codec/mp3/: Makefile.am  Makefile.in
player/src/codec/mpeg4/: Makefile.am  Makefile.in
player/src/codec/wav/: Makefile.am  Makefile.in
player/src/win_client/: Makefile.in
player/src/win_common/: Makefile.in
player/src/win_gui/: Makefile.in
player/src/win_gui/hlp/: Makefile.in
player/src/win_gui/res/: Makefile.in
server/: Makefile.in
server/mp4creator/: Makefile.am  Makefile.in
server/mp4live/: Makefile.am  Makefile.in
server/mp4live/gui/: Makefile.am  Makefile.in
server/mp4live/h261/: Makefile.am  Makefile.in
server/util/: Makefile.in
server/util/avi2raw/: Makefile.am  Makefile.in
server/util/avidump/: Makefile.am  Makefile.in
server/util/lboxcrop/: Makefile.am  Makefile.in
server/util/mp4encode/: Makefile.in
server/util/rgb2yuv/: Makefile.am  Makefile.in
server/video/: Makefile.in
util/: Makefile.in
util/h264/: Makefile.am  Makefile.in
util/iptv/: Makefile.am  Makefile.in
util/mpeg2/: Makefile.am  Makefile.in
util/mpeg4vol/: Makefile.am  Makefile.in
util/yuv/: Makefile.am  Makefile.in
